--- a/portfolio.html
+++ b/portfolio.html
@@ -20,10 +20,10 @@
         >
         <ul class="list header-list">
           <li class="header-item">
-            <a class="link" href="/index.html">Студия</a>
+            <a class="link" href="index.html">Студия</a>
           </li>
           <li class="header-item">
-            <a class="link current-item" href="/portfolio.html">Портфолио</a>
+            <a class="link current-item" href="portfolio.html">Портфолио</a>
           </li>
           <li class="header-item">
             <a class="link" href="#">Контакты</a>
